scroll closes menu, overflow on mobile fix

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -97,16 +97,26 @@
 
 nav {
   max-width: 1280px;
+  position: relative;
 }
 
 .nav-dropdown {
   position: absolute;
+  height: 0;
+  width: 0;
+
+  opacity: 0;
+  transform: translateX(100vw);
+  transition: transform .2s ease-in-out;
+}
+
+.nav-dropdown-show {
   display: flex;
   align-items: flex-end;
   flex-direction: column;
   gap: 40px;
   width: 80vw;
-  height: calc(100%);
+  height: 100vh;
   top: 132px;
   right: 0;
   text-align: end;
@@ -117,12 +127,6 @@ nav {
   font-size: 1.5rem;
   font-weight: 500;
 
-  opacity: 0;
-  transform: translateX(80vw);
-  transition: transform .2s ease-in-out;
-}
-
-.nav-dropdown-show {
   opacity: 1;
   transform: translateX(0);
   transition: transform .2s ease-in-out;
@@ -180,7 +184,7 @@ nav {
   .app-preview-container {
     min-height: 700px;
   }
-  
+
   .app-preview-inner-container {
     max-width: 600px;
     left: 50%;
